--- a/templates.html
+++ b/templates.html
@@ -31,9 +31,9 @@
             <div class="item">
                 <img id="template1" src="photo/6.gif" alt="قالب 1" class="thumb" />
                 <div>
-                    <div id="templateName1" class="editable" contenteditable="true">زر مميز بين </div>
-                    <div id="templateDesc1" class="editable" contenteditable="true">وصف قصير للقالب.</div>
-                    <a id="templateLink1" href="https://example.com" target="_blank" class="template-link">رابط القالب</a>
+                    <div id="templateName1" class="editable" contenteditable="true">زر مميز  </div>
+                    <div id="templateDesc1" class="editable" contenteditable="true">زر متحرك يستخدم في نقل بين مواقع </div>
+                    <a id="templateLink1" href="Code Editor/Code Editor.html" target="_blank" class="template-link">رابط القالب</a>
                 </div>
             </div>
             <div class="item">
