--- a/Code Editor/Code Editor.html
+++ b/Code Editor/Code Editor.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>EditorX — محرر (يسار) / معاينة (يمين)</title>
+        <link rel="icon" href="artist.png" type="image/png">
+
+    <title>𝐖𝐞𝐛 𝐀𝐫𝐭𝐢𝐬𝐭 محرر الكواد</title>
     <link rel="stylesheet" href="style.css">
     <!-- Monaco loader -->
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.43.0/min/vs/loader.js"></script>
@@ -19,7 +21,7 @@
             <div class="logo-dot"></div>
             <div class="brand-text">
                 <div class="small">فنان ويب</div>
-                <div class="big">Web Artist</div>
+                <div class="big">𝐖𝐞𝐛 𝐀𝐫𝐭𝐢𝐬𝐭</div>
             </div>
         </div>
 
