--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="artist.png" type="image/png">
     <title>Web Artist - الرئيسية</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -51,5 +52,6 @@
 
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
