--- a/templates.html
+++ b/templates.html
@@ -33,7 +33,7 @@
                 <div>
                     <div id="templateName1" class="editable" contenteditable="true">زر مميز  </div>
                     <div id="templateDesc1" class="editable" contenteditable="true">زر متحرك يستخدم في نقل بين مواقع </div>
-                    <a id="templateLink1" href="Code Editor/Code -1 Editor.html" target="_blank" class="template-link">رابط القالب</a>
+                    <a id="templateLink1" href="Code Editor -1/Code Editor.html" target="_blank" class="template-link">رابط القالب</a>
                 </div>
             </div>
             <div class="item">
